editors/tree-sitter/grammar.js
		source_file: ($) => repeat($._line),

		// The end of a line the language reads: a comment may close it. Not
		// `shell_line`'s, and not an `exec` body's -- there the `#` belongs to
		// whoever is being handed the text.
		_eol: ($) => seq(optional($.comment), $._newline),

		_line: ($) =>
			choice(
				$._eol,
				$.property,
				$.shell_line,
				$.exec_block,
				$.let_statement,
				$.assignment,
				$.do_statement,
				$.if_statement,
				$.retry_statement,
				$.for_statement,
				$.while_statement,
				$.until_statement,
				$.loop_statement,
				$.break_statement,
				$.continue_statement,
				$.match_statement,
				$.run_statement,
				$.expression_statement,
			),

		// ---- properties

		property: ($) =>
			seq(".", field("name", $.property_name), optional(seq("=", field("value", $._expression))), $._eol),

		property_name: ($) => seq($.identifier, repeat(seq(".", $.identifier))),

		// ---- shell

		// `detach` marks the command it prefixes. A `detach $` line is one
		// command: the `$` lines below it are separate statements, which is the
		// runner's rule too. The marker comes from the scanner, which can see
		// what follows it: as a plain token it was a keyword wherever a
		// statement may start, and `detach = 5` -- a binding to the runner --
		// did not parse.
		shell_line: ($) =>
			seq(optional(field("detach", alias($._detach_marker, "detach"))), "$", optional($.shell_text), $._newline),

		shell_text: ($) => repeat1(choice($.shell_content, alias($._lone_brace, $.shell_content), $.interpolation, $.line_continuation)),

		shell_content: () => token.immediate(prec(-1, /([^{\\\r\n]|\\[^\r\n])+/)),
		_lone_brace: () => token.immediate("{"),
		line_continuation: () => token.immediate(/\\\r?\n/),

		// Two spellings of one block. The keyword token differs because the
		// scanner recognises a bare `exec` at column 0; behind `detach` it is
		// no longer the first word, so it takes the same token a capture
		// `exec` does, which reads the line's indent off the preceding newline.
		exec_block: ($) =>
			choice(
				seq(
					alias($._exec_keyword, "exec"),
					field("command", $.command),
					$._eol,
					optional(field("body", $.exec_body)),
					"end",
					$._eol,
				),
				seq(
					field("detach", alias($._detach_marker, "detach")),
					alias($._capture_exec_keyword, "exec"),
					field("command", $.command),
					$._eol,
					optional(field("body", $.exec_body)),
					"end",
					$._eol,
				),
			),

		// An `exec` command is a line of **words**, which is how the runner
		// reads it too -- and why a comment may end this line while a `$`
		// line's `#` is the shell's. Nothing here is `token.immediate`, so a
		// word ends at the blank after it rather than running to the end of
		// the line; an immediate run, which is what a `$` line's text is,
		// would take the ` # note` with it and leave `_eol` nothing to find.
		command: ($) =>
			repeat1(
				choice(
					alias($._command_word, $.shell_content),
					alias($._command_brace, $.shell_content),
					alias($._command_interpolation, $.interpolation),
					alias($._command_continuation, $.line_continuation),
				),
			),
		_command_word: () => token(prec(-1, new RegExp(COMMAND_WORD))),
		_command_brace: () => "{",
		_command_interpolation: ($) => seq("{{", $._expression, "}}"),
		_command_continuation: () => /\\\r?\n/,

		// Body text comes from the scanner in runs that stop at `{{`, so an
		// interpolation inside a body is a node of its own.
		exec_body: ($) => repeat1(choice($.exec_content, $.interpolation)),

		// ---- statements

		// Several names unpack a list positionally; `_` is a position thrown
		// away, and needs no rule of its own because the identifier pattern
		// already admits it.
		let_statement: ($) =>
			seq(
				"let",
				field("name", $.identifier),
				repeat(seq(",", field("name", $.identifier))),
				"=",
				endsLine($, "value", choice($.capture_call, $.shell_capture), choice($.structured, $.exec_capture, $._expression)),
			),

		// A call whose last argument is a `$` run -- `lines($ git ls-files)`,
		// and `code_of($ cmd)`, which is that same shape wearing a name people
		// already know. Its shell text stops at the `)`; a capture otherwise
		// runs to end of line, which is why it can only ever be the *last*
		// argument, and why a command holding a parenthesis has to be a
		// statement of its own.
		//
		// Only `code_of` may hold a `run` dispatch. That is a rule about what
		// a call means rather than what it looks like -- a dispatched target
		// gives back a status and nothing else -- so the runner states it and
		// this grammar does not: an editor colours `lines(run x)` and the
		// parser is what refuses it.
		capture_call: ($) =>
			seq(
				field("name", $.identifier),
				"(",
				repeat(seq($._expression, ",")),
				choice($._capture_argument, $.dispatch),
				")",
			),
		_capture_argument: ($) => seq("$", optional(alias($._capture_text, $.shell_text))),

		// `code_of(run build)`: the same dispatch the statement spells, scored.
		// Only `code_of` takes one -- a dispatched target writes to the
		// terminal like any other, so its status is the only value it has.
		dispatch: ($) =>
			seq("run", field("target", alias($.dispatch_word, $.target)), repeat(alias($.dispatch_word, $.argument))),
		assignment: ($) =>
			seq(
				field("name", $.identifier),
				repeat(seq(",", field("name", $.identifier))),
				"=",
				endsLine($, "value", choice($.capture_call, $.shell_capture), choice($.structured, $.exec_capture, $._expression)),
			),

		// `json … end`: a block of structured text, as one value of that format.
		// Its body closes on an `end` at the opener's indentation, like every
		// other body here, so the scanner needs nothing new. Adding YAML or
		// TOML later is one more word in `structured_format`.
		structured: ($) =>
			seq(
				field("format", alias($._structured_keyword, $.structured_format)),
				$._eol,
				optional(field("body", $.exec_body)),
				"end",
			),

		// `$` or `exec` in value position: what the command prints. The two are
		// named apart rather than wrapped in one `capture` node, because the
		// end of their line differs: a `$` capture runs to the end of it, `#`
		// included, while an `exec` one closes on an `end` of its own and takes
		// a comment after it like any other line.
		shell_capture: ($) => seq("$", optional($.shell_text)),
		exec_capture: ($) =>
			seq(alias($._capture_exec_keyword, "exec"), field("command", $.command), $._eol, optional(field("body", $.exec_body)), "end"),

		// `do` … `end`: a block with no condition, so a property has somewhere
		// to go without inventing a question.
		// `parallel` in front of `do` or `for` runs its branches at once. A
		// marker on the block rather than a block of its own, the way `detach`
		// is a marker on a command, and recognised the same way: by the
		// scanner, only in front of the word it marks, so `parallel = 5` is a
		// binding here as it is to the runner.
		do_statement: ($) =>
			seq(optional(field("parallel", alias($._parallel_marker, "parallel"))), "do", $._eol, repeat($._line), "end", $._eol),

		if_statement: ($) =>
			seq(
				"if",
				// A `$` run may stand as the condition: it is true when the
				// command succeeds. Never an `exec` -- its `end` would be the
				// one the `if` wants.
				endsLine($, "condition", $.shell_capture, $._expression),
				repeat($._line),
				optional($._else_clause),
				"end",
				$._eol,
			),

		// `else if` continues the chain rather than opening a block of its
		// own, so one `end` closes however many of them there are. Hidden, so
		// the whole chain is one `if_statement` node -- which is what it is.
		_else_clause: ($) =>
			choice(
				seq(
					"else",
					"if",
					endsLine($, "condition", $.shell_capture, $._expression),
					repeat($._line),
					optional($._else_clause),
				),
				seq("else", $._eol, repeat($._line)),
			),

		// `retry n [every s]` … `[else …]` `end`: the body is run again while it
		// fails, up to n times, and `else` is what to do when it never worked.
		retry_statement: ($) =>
			seq(
				"retry",
				field("attempts", $._expression),
				optional(seq("every", field("delay", $._expression))),
				$._eol,
				repeat($._line),
				optional(seq("else", $._eol, repeat($._line))),
				"end",
				$._eol,
			),

		for_statement: ($) =>
			seq(
				optional(field("parallel", alias($._parallel_marker, "parallel"))),
				"for",
				field("variable", $.identifier),
				repeat(seq(",", field("variable", $.identifier))),
				"in",
				endsLine($, "iterable", $.capture_call, $._expression),
				repeat($._line),
				"end",
				$._eol,
			),

		// `while` and `until` are the same block asking opposite questions.
		// Written as two rules rather than a `choice` of keywords so the node
		// name says which one is on the screen.
		while_statement: ($) =>
			seq("while", endsLine($, "condition", $.shell_capture, $._expression), repeat($._line), "end", $._eol),

		until_statement: ($) =>
			seq("until", endsLine($, "condition", $.shell_capture, $._expression), repeat($._line), "end", $._eol),

		// Takes no condition: `break` is how it ends.
		loop_statement: ($) => seq("loop", $._eol, repeat($._line), "end", $._eol),

		break_statement: ($) => seq("break", $._eol),
		continue_statement: ($) => seq("continue", $._eol),

		match_statement: ($) =>
			seq(
				"match",
				// A `$` run may stand as the subject, and the cases are then
				// exit codes: `case "0"`, `case "1"`.
				endsLine($, "subject", $.shell_capture, $._expression),
				repeat($._eol),
				repeat($.match_case),
				optional($.match_default),
				"end",
				$._eol,
			),

		// A label is a string, always quoted: it is compared against a value, and
		// `RUN.os` is a string like any other.
		match_case: ($) => seq("case", field("label", $.string), $._eol, repeat($._line)),
		match_default: ($) => seq("default", $._eol, repeat($._line)),

		run_statement: ($) => seq("run", field("target", alias($.run_word, $.target)), repeat(alias($.run_word, $.argument)), $._eol),

		expression_statement: ($) => choice(seq($.capture_call, $._newline), seq($._expression, $._eol)),

		// ---- expressions

		_expression: ($) =>
			choice(
				$.chain_expression,
				$.binary_expression,
				$.unary_expression,
				$.call_expression,
				$.index_expression,
				$._primary,
			),

		// `a ? b`: a, or b when a does not resolve. Not a ternary.
		chain_expression: ($) => prec.left(PREC.chain, seq($._expression, "?", $._expression)),

		binary_expression: ($) =>
			choice(
				prec.left(PREC.or, seq($._expression, "||", $._expression)),
				prec.left(PREC.and, seq($._expression, "&&", $._expression)),
				prec.left(PREC.compare, seq($._expression, choice("==", "!=", "<", "<=", ">", ">="), $._expression)),
				prec.left(PREC.add, seq($._expression, choice("+", "-"), $._expression)),
				prec.left(PREC.multiply, seq($._expression, choice("*", "/", "%"), $._expression)),
			),

		unary_expression: ($) => prec(PREC.unary, seq(choice("!", "-"), $._expression)),

		call_expression: ($) => prec(PREC.postfix, seq(field("function", $.identifier), field("arguments", $.arguments))),
		arguments: ($) => seq("(", optional(seq($._expression, repeat(seq(",", $._expression)), optional(","))), ")"),

		index_expression: ($) => prec(PREC.postfix, seq($._expression, "[", $._expression, "]")),

		list: ($) =>
			seq(
				"[",
				repeat($._eol),
				optional(
					seq(
						$._expression,
						repeat(seq(repeat($._eol), ",", repeat($._eol), $._expression)),
						optional(seq(repeat($._eol), ",")),
					),
				),
				repeat($._eol),
				"]",
			),

		source: ($) => choice(seq(field("root", choice("ARG", "ENV", "FLAG", "RUN")), ".", field("key", $.identifier)), "ARGS"),

		number: () => /[0-9]+(\.[0-9]+)?/,
		identifier: () => /[A-Za-z_][A-Za-z0-9_-]*/,

		// A string skips `{{ … }}`, so a quote inside an interpolation does not
		// terminate it. The parser gets that for free: the interpolation's
		// expression is parsed as an expression, quotes and all.
		string: ($) => seq('"', repeat(choice($.string_content, alias($._string_brace, $.string_content), $.escape_sequence, $.interpolation)), '"'),
		string_content: () => token.immediate(/[^"\\{]+/),
		_string_brace: () => token.immediate("{"),
		// Exactly the runner's escapes: `\e` is ESC, which `printf` colours with,
		// and anything else is an error there, so it is one here too.
		escape_sequence: () => token.immediate(/\\["\\ntre]/),

		// Keeps its backslashes, but `\"` still does not terminate it.
		raw_string: ($) =>
			seq(
				'r"',
				repeat(choice(alias($.raw_content, $.string_content), alias($._raw_escape, $.string_content), alias($._string_brace, $.string_content), $.interpolation)),
				'"',
			),
		_raw_escape: () => token.immediate(/\\./),

		interpolation: ($) => seq("{{", $._expression, "}}"),
	},
});
