editors/tree-sitter/test/corpus/lines.txt
================================================================================
A description block, blank lines, and a shell line
================================================================================
# Builds it
#
# Two paragraphs.

$ echo hi
--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (comment)
  (shell_line
    (shell_text
      (shell_content))))

================================================================================
A comment is a whole line
================================================================================
# note
let x = 1
--------------------------------------------------------------------------------

(source_file
  (comment)
  (let_statement
    (identifier)
    (number)))
