editors/tree-sitter/test/corpus/statements.txt
================================================================================
Bindings and control flow
================================================================================
let n = 1
n = n + 1
if n == 2 && !FLAG.quiet
	$ echo two
else
	$ echo other
end
for f in ["a", "b"]
	$ echo {{ f }}
end
match ARG.kind
case "major"
	$ echo major
case "minor"
	$ echo minor
default
	error("unknown")
end
--------------------------------------------------------------------------------

(source_file
  (let_statement
    (identifier)
    (number))
  (assignment
    (identifier)
    (binary_expression
      (identifier)
      (number)))
  (if_statement
    (binary_expression
      (binary_expression
        (identifier)
        (number))
      (unary_expression
        (source
          (identifier))))
    (shell_line
      (shell_text
        (shell_content)))
    (shell_line
      (shell_text
        (shell_content))))
  (for_statement
    (identifier)
    (list
      (string
        (string_content))
      (string
        (string_content)))
    (shell_line
      (shell_text
        (shell_content)
        (interpolation
          (identifier)))))
  (match_statement
    (source
      (identifier))
    (match_case
      (string
        (string_content))
      (shell_line
        (shell_text
          (shell_content))))
    (match_case
      (string
        (string_content))
      (shell_line
        (shell_text
          (shell_content))))
    (match_default
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (string
              (string_content))))))))

================================================================================
Run with arguments, a passthrough separator, and an interpolated word
================================================================================
run build --env=prod -- --release {{ ARGS }}
run web:{{ target }} "quoted {{ "}}" }}"
--------------------------------------------------------------------------------

(source_file
  (run_statement
    (target)
    (argument)
    (argument)
    (argument)
    (argument))
  (run_statement
    (target)
    (argument)
    (argument)))

================================================================================
A bare call is a statement
================================================================================
write_file("out.txt", concat("a", "b"))
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      (identifier)
      (arguments
        (string
          (string_content))
        (call_expression
          (identifier)
          (arguments
            (string
              (string_content))
            (string
              (string_content))))))))

================================================================================
A `$` run as a condition, as a match subject, and inside code_of
================================================================================

if $ test -f x
	$ echo yes
end
match $ grep -q a b
case "0"
	$ echo hit
default
	$ echo miss
end
let c = code_of($ mkdir out)
code_of($ false)

--------------------------------------------------------------------------------

(source_file
  (if_statement
    (shell_capture
      (shell_text
        (shell_content)))
    (shell_line
      (shell_text
        (shell_content))))
  (match_statement
    (shell_capture
      (shell_text
        (shell_content)))
    (match_case
      (string
        (string_content))
      (shell_line
        (shell_text
          (shell_content))))
    (match_default
      (shell_line
        (shell_text
          (shell_content)))))
  (let_statement
    (identifier)
    (capture_call
      (identifier)
      (shell_text
        (shell_content))))
  (expression_statement
    (capture_call
      (identifier)
      (shell_text
        (shell_content)))))

================================================================================
A retry with a delay and an else
================================================================================

retry 120 every 1
	$ pg_isready
else
	$ echo gave up
end

--------------------------------------------------------------------------------

(source_file
  (retry_statement
    (number)
    (number)
    (shell_line
      (shell_text
        (shell_content)))
    (shell_line
      (shell_text
        (shell_content)))))

================================================================================
A json block with an interpolation
================================================================================

let doc = json
	{ "a": 1, "b": {{ x }} }
end

--------------------------------------------------------------------------------

(source_file
  (let_statement
    (identifier)
    (structured
      (structured_format)
      (exec_body
        (exec_content)
        (interpolation
          (identifier))
        (exec_content)))))

================================================================================
A bare block
================================================================================

do
	.workdir = "web"

	$ pnpm install
end

--------------------------------------------------------------------------------

(source_file
  (do_statement
    (property
      name: (property_name
        (identifier))
      value: (string
        (string_content)))
    (shell_line
      (shell_text
        (shell_content)))))

================================================================================
A dispatch inside code_of
================================================================================

let c = code_of(run test)
code_of(run web:build --env={{ e }})

--------------------------------------------------------------------------------

(source_file
  (let_statement
    (identifier)
    (capture_call
      (identifier)
      (dispatch
        (target))))
  (expression_statement
    (capture_call
      (identifier)
      (dispatch
        (target)
        (argument)))))

================================================================================
A capture as any call's last argument
================================================================================

let files = lines($ git diff --cached --name-only)
let n = length(split(",", "a"), $ echo x)

for f in lines($ git ls-files '*.sh')
	$ shellcheck {{ f }}
end

--------------------------------------------------------------------------------

(source_file
  (let_statement
    (identifier)
    (capture_call
      (identifier)
      (shell_text
        (shell_content))))
  (let_statement
    (identifier)
    (capture_call
      (identifier)
      (call_expression
        (identifier)
        (arguments
          (string
            (string_content))
          (string
            (string_content))))
      (shell_text
        (shell_content))))
  (for_statement
    (identifier)
    (capture_call
      (identifier)
      (shell_text
        (shell_content)))
    (shell_line
      (shell_text
        (shell_content)
        (interpolation
          (identifier))))))

================================================================================
Loops: while, until, loop, and the two ways out of one
================================================================================
while n > 0
	n = n - 1
end
until $ curl -sf localhost:8080/health
	sleep(1)
end
loop
	if done
		break
	end
	continue
end
--------------------------------------------------------------------------------

(source_file
  (while_statement
    (binary_expression
      (identifier)
      (number))
    (assignment
      (identifier)
      (binary_expression
        (identifier)
        (number))))
  (until_statement
    (shell_capture
      (shell_text
        (shell_content)))
    (expression_statement
      (call_expression
        (identifier)
        (arguments
          (number)))))
  (loop_statement
    (if_statement
      (identifier)
      (break_statement))
    (continue_statement)))

================================================================================
Unpacking a list: in a let, a reassignment, and a for
================================================================================
let x, _, z = [1, 2, 3]
x, z = [z, x]
for name, owner in pairs
	$ echo {{ name }}
end
--------------------------------------------------------------------------------

(source_file
  (let_statement
    (identifier)
    (identifier)
    (identifier)
    (list
      (number)
      (number)
      (number)))
  (assignment
    (identifier)
    (identifier)
    (list
      (identifier)
      (identifier)))
  (for_statement
    (identifier)
    (identifier)
    (identifier)
    (shell_line
      (shell_text
        (shell_content)
        (interpolation
          (identifier))))))

================================================================================
An else-if chain is one block, closed by one end
================================================================================
if a == 1
	$ echo one
else if a == 2
	$ echo two
else if $ test -f x
	$ echo three
else
	$ echo other
end
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (binary_expression
      (identifier)
      (number))
    (shell_line
      (shell_text
        (shell_content)))
    (binary_expression
      (identifier)
      (number))
    (shell_line
      (shell_text
        (shell_content)))
    (shell_capture
      (shell_text
        (shell_content)))
    (shell_line
      (shell_text
        (shell_content)))
    (shell_line
      (shell_text
        (shell_content)))))

================================================================================
A parallel do and a parallel for
================================================================================
parallel do
	$ lint
	run api:check
end
parallel for svc in services
	run build
end
--------------------------------------------------------------------------------

(source_file
  (do_statement
    (shell_line
      (shell_text
        (shell_content)))
    (run_statement
      target: (target)))
  (for_statement
    variable: (identifier)
    iterable: (identifier)
    (run_statement
      target: (target))))

================================================================================
A parallel block nested in another block
================================================================================
if ready
	parallel do
		$ lint
	end
end
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (identifier)
    (do_statement
      (shell_line
        (shell_text
          (shell_content))))))

================================================================================
parallel and detach are still ordinary names
================================================================================
let parallel = 5
parallel = parallel + 1
detach = 2
if parallel > detach
	detach = parallel
end
--------------------------------------------------------------------------------

(source_file
  (let_statement
    (identifier)
    (number))
  (assignment
    (identifier)
    (binary_expression
      (identifier)
      (number)))
  (assignment
    (identifier)
    (number))
  (if_statement
    (binary_expression
      (identifier)
      (identifier))
    (assignment
      (identifier)
      (identifier))))
